fixed support form text alignment

--- a/css/app.css
+++ b/css/app.css
@@ -92,7 +92,10 @@ header {
   }
 
   .formFieldComment{
-    padding-top: 10px;
+    padding-bottom: 100px;
+    color: #111;
+    border-radius: 2px;
+    border: 0;
   }
 
   #downloadform {
